# synapse-project

./: .bzrignore  .gitignore  .travis.yml  AUTHORS  Dockerfile  Makefile  Makefile.am  Makefile.common  NEWS  README  README.md  abstract-tile-object.vala  autogen.sh  cancellable-fix.vapi  command-plugin.vala  common-actions.vala  configure.ac  data-sink.vala  dbus-service.vala  desktop-file-plugin.vala  devhelp-search.vala  dictionary.vala  gnome-session-plugin.vala  gtkhotkey-1.0.vapi  hybrid-search-plugin.vala  main.vala  match.vala  query.vala  rhythmbox-plugin.vala  test-slow-plugin.vala  tile-view.vala  tile.vala  ui-basic-gtk.vala  ui-cairo-gtk-launcher.vala  ui-cairo-gtk-mini.vala  ui-cairo-gtk.vala  ui-cmd-line.vala  ui-interface.vala  ui-match-interface.vala  ui-settings.vala  (+6 more)
data/: Makefile.am  synapse.desktop.in
debian/: changelog  control  copyright  docs  install  rules  synapse.1  synapse.manpages  synapse.menu  watch
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  la.po  list  lt.po  lv.po  ml.po  nb.po  nds.po  ne.po  nl.po  nn.po  oc.po  pl.po  (+15 more)
src/: Makefile.am  banshee-plugin.vala  command-plugin.vala  common-actions.vala  configuration.vala  data-sink.vala  desktop-file-plugin.vala  desktop-file-service.vala  devhelp-search.vala  dictionary.vala  directory-plugin.vala  gnome-session-plugin.vala  hybrid-search-plugin.vala  locate-plugin.vala  match.vala  open-with-plugin.vala  query.vala  result-set.vala  rhythmbox-plugin.vala  synapse-main.vala  tile.vala  ui-basic-gtk.vala  ui-cairo-gtk-base.vala  ui-cairo-gtk-doish.vala  ui-cairo-gtk-mini.vala  ui-cairo-gtk-two-lines.vala  ui-cairo-gtk-virgilio.vala  ui-cairo-gtk.vala  ui-cmd-line.vala  ui-inspector.vala  ui-interface.vala  ui-settings.vala  ui-utils.vala  ui-widgets-matchlistview.vala  ui-widgets.vala  upower-plugin.vala  zeitgeist-plugin.vala
src/core/: Makefile.am  common-actions.vala  config-service.vala  configuration.vala  data-sink.vala  dbus-service.vala  desktop-file-service.vala  match.vala  plugin.vala  query.vala  relevancy-backend-zg.vala  relevancy-service.vala  result-set.vala  utils.vala  volume-service.vala
src/plugins/: Makefile.am  banshee-plugin.vala  calculator-plugin.vala  chat-actions-plugin.vala  chromium-plugin.vala  command-plugin.vala  desktop-file-plugin.vala  devhelp-search.vala  dictionary.vala  directory-plugin.vala  file-op-plugin.vala  gnome-bookmarks-plugin.vala  gnome-screensaver-plugin.vala  gnome-session-plugin.vala  gnote-plugin.vala  hello-world-plugin.vala  hybrid-search-plugin.vala  imgur-plugin.vala  launchpad-plugin.vala  locate-plugin.vala  opensearch.vala  pass-plugin.vala  pastebin-plugin.vala  pidgin-plugin.vala  rhythmbox-plugin.vala  rolldice-plugin.vala  screensaver-plugin.vala  selection-plugin.vala  ssh-plugin.vala  system-management.vala  test-slow-plugin.vala  tomboy-notes-plugin.vala  upower-plugin.vala  xnoise-media-player-plugin.vala  zeal-plugin.vala  zeitgeist-plugin.vala  zeitgeist-related.vala  zim-plugin.vala
src/tile-view/: Makefile.am  abstract-tile-object.vala  tile-view.vala  tile.vala  wrap-label.vala
src/ui/: Makefile.am  cairo-gtk-base.vala  cairo-gtk-doish.vala  cairo-gtk-mini.vala  cairo-gtk-two-lines.vala  cairo-gtk-virgilio.vala  cairo-gtk.vala  category.vala  cmd-line.vala  controller.vala  icon-cache-service.vala  inspector.vala  interfaces.vala  keybindings.vala  model.vala  settings.vala  synapse-main.vala  ui-cairo-gtk-mini.vala  ui-cairo-gtk-two-lines.vala  ui-interface.vala  utils.vala  view-bar.vala  view-base.vala  view-default.vala  view-doish.vala  view-essential.vala  view-side-doish.vala  view-test.vala  view-virgilio.vala  widgets-matchlistview.vala  widgets.vala
src/ui/tile-view/: abstract-tile-object.vala  tile-view.vala  tile.vala  wrap-label.vala
test/: README
vapi/: Makefile.am  appindicator-0.1.vapi  config.vapi  keysyms.vapi
